# partsvr

./: README.md
application/crossover/: readme
code/Image2pc_basic/: create_tf_records.py  data_test_pc.py  draw_volume.m  draw_volume_seg.m  img_encoder.py  model_base.py  model_pc.py  mydataset.py  mydataset_eval.py  pc_decoder.py  pc_projection.py  pose_decoder.py  show3d_balls.py  show3d_balls1.py  show_balls.py  show_balls1.py  show_pc.py  test.py  test_gt_show.py  test_pose.py  train.py  train_test.py  utiltorch.py
code/Image2pc_gan/: Gan_pretrain.py  Gen_pretest.py  Loss_plot.py  assembly_net.py  compute_alignment.py  create_tf_records.py  crossover.py  data_full_pcd.py  data_seg_pcd.py  discrinimator.py  eval_camera_pose.py  eval_chamfer_unsuper.py  evaluation_cf.py  evaluation_cf_unsuper.py  evaluation_cmd.py  evolution.py  img_encoder.py  interpolation.py  model_base.py  mydataset_gan.py  mydataset_gan_eval.py  pc_decoder.py  pc_decoder_part.py  pc_normalize.py  pc_projection.py  pointnet.py  pointnet1.py  pointnetD.py  show3d_balls.py  show3d_balls1.py  show_balls.py  show_balls1.py  show_pc.py  show_pc_seg.py  test_gt_show.py  test_part.py  test_part_code1.py  test_part_pose.py  test_part_v1.py  test_pc_decoder.py  (+9 more)
data_code/: README.md  create_data_h5.py  data_full_pcd_combined.py  data_seg_pcd.py  densify_03001627_test.txt  densify_03001627_val.txt  generate_ground_truth.sh  gt_generate.m
data_code/pcl/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mesh  mesh.cpp  os_eval.py  pcl  pcl.cpp  pcl_test.cpp  readme
(+18 files in other folders)
